--- a/michelson/michelson-paper.tex
+++ b/michelson/michelson-paper.tex
@@ -181,7 +181,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-  A Michelson interferometer is a device where a beam of light can be split in two perpendicular directions, recombined, and then measured via a photodetector. By varying the length that one of the two split beams travels, one can produce interference patterns that can be detected by the photodetector. This setup was originally devised by Michelson in 1881 to test whether light propegated through an "aether," which could cause the light to travel more slowly in one direction than the other, thereby producing an interference pattern. His experiment, along with others of the time period, eventually showed that light travelled at the same speed irrespective of direction. This conclusions allowed the Michelson interferemoter to be useful for other measurements, such as the one described here.
+A Michelson interferometer is a device where a beam of light can be split in two perpendicular directions, recombined, and then measured via a photodetector. By varying the length that one of the two split beams travels, one can produce interference patterns that can be detected by the photodetector. This setup was originally devised by Michelson in 1881 to test whether light propegated through an "aether," which could cause the light to travel more slowly in one direction than the other, thereby producing an interference pattern \ref{michelson}. His experiment, along with others of the time period, eventually showed that light travelled at the same speed irrespective of direction. This conclusions allowed the Michelson interferemoter to be useful for other measurements, such as the one described here.
   \\
   As variations in length will be the predominant contributor to interference patterns, by varying the length precisely via a PZT (Piezoelectric Transducer) we can detect with high precision the length changes that correspond to various interference patterns. This allows us to calculate the wavelength of the beam of light under study. Through this procedure, we are able to calculate the wavelength of the light beam used as $620 \pm 36$ nm.
   \\
@@ -259,8 +259,11 @@
     In our experiment, we conducted 29 measurements of the voltage difference across maxima and minima, represented visually in \ref{fig:graph}. These measurements have associated uncertainty due to the oscilliscope measurements being taken from reading off the values by eye. Taking the average of these measurements and calculating the unncertainty, we arrive at an average voltage difference of $6.96 \pm .12 $ V. Converting this into length displacement, we conclude that the predicted wavelenght of the laser is $620 \pm 38$ nm. This is within the visible spectrum, and rougly corresponds with the observed colour of the laser.
     \section{Conclusion}
     Michelson interferometers allow one to detect interference patterns created through the relative phase difference of two laser beams. By varying this phase in a controlled manner and comparing this to the interference patterns recorded, we are able to determine the wavelength of the source laser with an uncertainty of less than 50 nanometers. 
-    \section{Acknowledgements}
+    \begin{acknowledgements}
     I would like to thank my 8.13 lab partner, Adin Hrnjic, for assisting with this experiment as well as providing invaluable guidance through the analysis of our data. Additionally, I would like to thank Rudy Garcia for additional guidance throughout the analysis of our data.
-    \lipsum
+  \end{acknowledgements}
+  \lipsum
+
+  \bibliography{michelson-paper}
 
 \end{document}
