--- a/michelson/michelson-paper.bib
+++ b/michelson/michelson-paper.bib
@@ -1,8 +1,9 @@
-@MANUAL{michelsonmanual,
+@MISC{michelsonmanual,
   title={Optical Interferometry},
-  author={MIT Department of Physics},
+  organization={MIT Department of Physics},
   month={August},
-  year={2013}}
+  year={2013},
+  url={http://web.mit.edu/8.13/www/JLExperiments/JLExp009.pdf}}
 
 @ARTICLE{michelson,
   title={On the Relative Motion of the Earth and the Luminiferous Ether},
