--- a/michelson/michelson-paper.tex
+++ b/michelson/michelson-paper.tex
@@ -181,7 +181,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-A Michelson interferometer is a device where a beam of light can be split in two perpendicular directions, recombined, and then measured via a photodetector. By varying the length that one of the two split beams travels, one can produce interference patterns that can be detected by the photodetector. This setup was originally devised by Michelson in 1881 to test whether light propegated through an "aether," which could cause the light to travel more slowly in one direction than the other, thereby producing an interference pattern \ref{michelson}. His experiment, along with others of the time period, eventually showed that light travelled at the same speed irrespective of direction. This conclusions allowed the Michelson interferemoter to be useful for other measurements, such as the one described here.
+A Michelson interferometer is a device where a beam of light can be split in two perpendicular directions, recombined, and then measured via a photodetector. By varying the length that one of the two split beams travels, one can produce interference patterns that can be detected by the photodetector. This setup was originally devised by Michelson in 1881 to test whether light propegated through an "aether," which could cause the light to travel more slowly in one direction than the other, thereby producing an interference pattern \cite{michelson}. His experiment, along with others of the time period, eventually showed that light travelled at the same speed irrespective of direction. This conclusions allowed the Michelson interferemoter to be useful for other measurements, such as the one described here.
   \\
   As variations in length will be the predominant contributor to interference patterns, by varying the length precisely via a PZT (Piezoelectric Transducer) we can detect with high precision the length changes that correspond to various interference patterns. This allows us to calculate the wavelength of the beam of light under study. Through this procedure, we are able to calculate the wavelength of the light beam used as $620 \pm 36$ nm.
   \\
@@ -232,11 +232,11 @@ A Michelson interferometer is a device where a beam of light can be split in two
   %Where $I_{max}$ and $I_{min}$ represent the maximum and minimum intensities measured, respectively. In an ideal setting, $I_{min} = 0$ and $\mathcal{V} = 1$ - deviations from this will cause the visibility to dip below $1$.
 
   \section{Experimental Setup}
-  The source of our light beam will be an orange laser, which emits a constant light source of a certain wavelength. A beam splitter is positioned along the trajetory of the beam at a 45 degree angle, which splits the beam into two beams of approximately equal amplitude, each travelling perpendicular to the other. One of the beams travels a length $l_2$, is reflected by a mirror, and is sent back to be detected by a photodetector. The other beam travels a length $l_1$ and reaches a mirror connected to a PZT (piezoelectric transducer). The PZT is connected to a function generator, which supplies the PZT with a varying voltage in the form of a triangle waveform with a peak-to-peak voltage of 10V and a frequency of 10Hz. The PZT translates these supplied voltages to spatial translations along the length of $l_1$. The PZT used in this experiment has a response of the form $44.6 \pm 2.6$ $nm/V$. As the voltage varies, the length that the beam of light travels to reach the mirror varies from $l_1 + \Delta$ to $l_1 - \Delta$, where $\Delta$ is some small displacement induced by the PZT. The function generator applied to the PZT is additionally connected to an oscilliscope, which allows us to read off the voltage being supplied to the PZT, and therefore the difference in length in the trajectory of the light beam.
+  The source of our light beam will be an orange laser, which emits a constant light source of a certain wavelength. A beam splitter is positioned along the trajetory of the beam at a 45 degree angle, which splits the beam into two beams of approximately equal amplitude, each travelling perpendicular to the other. One of the beams travels a length $l_2$, is reflected by a mirror, and is sent back to be detected by a photodetector. The other beam travels a length $l_1$ and reaches a mirror connected to a PZT (piezoelectric transducer). The PZT is connected to a function generator, which supplies the PZT with a varying voltage in the form of a triangle waveform with a peak-to-peak voltage of 10V and a frequency of 10Hz. The PZT translates these supplied voltages to spatial translations along the length of $l_1$. The PZT used in this experiment has a response of $44.6 \pm 2.6$ $nm/V$. As the voltage varies, the length that the beam of light travels to reach the mirror varies from $l_1 + \Delta$ to $l_1 - \Delta$, where $\Delta$ is some small displacement induced by the PZT. The function generator applied to the PZT is additionally connected to an oscilliscope, which allows us to read off the voltage being supplied to the PZT, and therefore the difference in length in the trajectory of the light beam.
   \\
   \begin{figure}[t]
     \includegraphics[width=0.4\textwidth]{setup.png}
-    \caption{A block diagram of our experimental setup, with lengths $l_1$ and $l_2$ indicating the distance travelled by each of the two light beams.}
+    \caption{A block diagram of our experimental setup, with lengths $l_1$ and $l_2$ indicating the distance travelled by each of the two light beams. \cite{michelsonmanual}}
   \end{figure}
   Both light beams are reflected by the mirrors, and recombined at a photodetector, which measures the intensity of the beam. A crucial calibration step in this experiment is positioning the two mirrors so that the two beam align perfectly on the photdetector. Any deviations from this will reduce the signal measured. The photodetector is connected to the oscilliscope previously mentioned. This allows us to simultaneously measure the voltage supplied to the PZT - and in virtue of that, the displacement of the mirror attached to it - and the intensity of the resulting beam.
   \section{Data Analysis}
@@ -249,19 +249,25 @@ A Michelson interferometer is a device where a beam of light can be split in two
     The change from one maxima to another, or the change from one minima to another, corresponds to a change in the length travelled by one of the beams equal to the wavelength. This is a direct consequence of equation (6). Therefore, calculating the voltage differences supplied ot the PZT across maxima and minima, and then determining the displacement length corresponding to that voltage. we are able to determine the wavelength of the laser beam.
     \\
     Over the course of taking measurements of this voltage difference, we will accumulate a distribution of values. Using this distribution, we can calculate a mean, along with some statistical uncertainty for this value. Using this value, we can use the response value of the PZT, with its associated uncertainty, to come to final conclusion and uncertainy of our laser's wavelength.
-    \begin{figure}[h]
-      \includegraphics[width=0.45\textwidth]{graph_times.pdf}
+    \section{Data Analysis}
+    \begin{figure}[t]
+      \includegraphics[width=0.45\textwidth]{graph_helvetica.pdf}
       \caption{A distribution of the measured voltage differences between minima and maxima of interference peaks, with associated uncertainties for the frequency counts.}
       \label{fig:graph}
     \end{figure}
     \\
-    In our experiment, we conducted 29 measurements of the voltage difference across maxima and minima, represented visually in \ref{fig:graph}. These measurements have associated uncertainty due to the oscilliscope measurements being taken from reading off the values by eye. Taking the average of these measurements and calculating the unncertainty, we arrive at an average voltage difference of $6.96 \pm .12 $ V. Converting this into length displacement, we conclude that the predicted wavelenght of the laser is $620 \pm 38$ nm. This is within the visible spectrum, and rougly corresponds with the observed colour of the laser.
+    In our experiment, we conducted 29 measurements of the voltage difference across maxima and minima, represented visually in \ref{fig:graph}. Each individual voltage measurement has associated uncertainty of $\pm 0.1$ V due to the oscilliscope measurements being taken from reading off the values by eye. As two measurements are necessary to determine a voltage difference, this results in a total uncertainty of $\pm 0.14$ V. Taking the average of these measurements and calculating the uncertainty associated with this average, we arrive at an average voltage difference of $6.96 \pm .14 $ V. As the distribution of values was closely-packed, averaging over them only gives an additional uncertainty of $\pm 0.02$ V, which does not noticiably modify our initial uncertainty of $\pm 0.14$. Converting this average voltage into length displacement, we conclude that the predicted wavelenght of the laser is $620 \pm 38$ nm. This is within the visible spectrum, and rougly corresponds with the observed colour of the laser. Because of this, we can conclude that Michelson interferometers provide a method of detecting wavelengths of supplied light sources to within a reasonable degree of accuracy.
+    
+    By looking at our error propegation further, one can see that our PZT response of $44.6 \pm 2.6$ $nm/V$ is the single largest contributor of uncertainty in our experiment.
+    \begin{figure}[h]
+      \includegraphics[width=0.45\textwidth]{error.pdf}
+      \caption{A graph showing the decrease }
+    \end{figure}
     \section{Conclusion}
     Michelson interferometers allow one to detect interference patterns created through the relative phase difference of two laser beams. By varying this phase in a controlled manner and comparing this to the interference patterns recorded, we are able to determine the wavelength of the source laser with an uncertainty of less than 50 nanometers. 
     \begin{acknowledgements}
     I would like to thank my 8.13 lab partner, Adin Hrnjic, for assisting with this experiment as well as providing invaluable guidance through the analysis of our data. Additionally, I would like to thank Rudy Garcia for additional guidance throughout the analysis of our data.
   \end{acknowledgements}
-  \lipsum
 
   \bibliography{michelson-paper}
 
